Ozhaev Zaynudin Sharik3.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:44:44: error: 'vx' was not declared in this scope
         if (txGetAsyncKeyState (VK_RIGHT)) vx++;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:45:44: error: 'vx' was not declared in this scope
         if (txGetAsyncKeyState (VK_LEFT))  vx--;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:46:44: error: 'vy' was not declared in this scope
         if (txGetAsyncKeyState (VK_UP))    vy--;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:47:44: error: 'vy' was not declared in this scope
         if (txGetAsyncKeyState (VK_DOWN))  vy++;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:49:44: error: 'vy' was not declared in this scope
         if (txGetAsyncKeyState (VK_SPACE)) vy = vx = 0;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:49:49: error: 'vx' was not declared in this scope
         if (txGetAsyncKeyState (VK_SPACE)) vy = vx = 0;
                                                 ^
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:2:
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:68:33: error: 'x' was not declared in this scope
             txSetColor     (RGB(x,   y,   150), 2);
                                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:68:38: error: 'y' was not declared in this scope
             txSetColor     (RGB(x,   y,   150), 2);
                                      ^
---------------------------------------------------------------------------------------------
[31.05.2021  1:53:28,27 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
